# 3dbag-surfaces

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  justfile  pyproject.toml
.githooks/: commit-msg  pre-commit
scripts/: profile_shared_walls.py  translate_and_index.py
src/bag3d_surfaces/: cityjson.py  geometry.py  walls.py
src/bag3d_surfaces/helpers/: geometry.py
src/building_surfaces/: cityjson.py  geometry.py  walls.py
src/building_surfaces/helpers/: geometry.py
src/party_walls/: city_stats.py  cityjson.py  geometry.py  walls.py
src/party_walls/helpers/: geometry.py
tests/: test_3dbag_integration.py  test_shared_walls.py
