[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/party_walls"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "party-walls"
version = "0.1.0"
description = "Party wall statistics from CityJSON building models"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.6",
    "matplotlib>=3.7.2",
    "numpy>=1.24.4",
    "pandas>=2.1.0",
    "geopandas>=0.13.2",
    "rtree>=1.0.1",
    "scipy>=1.10.1",
    "pymeshfix>=0.16.2",
    "shapely>=2.0.1",
    "pyvista>=0.37.0",
    "vtk>=9.2.6",
    "mapbox-earcut>=1.0.1",
    "scikit-learn>=1.3.0",
    "pgutils @ git+https://github.com/balazsdukai/pgutils.git@2024.1013#egg=pgutils",
    "psycopg[binary]>=3.0",
]

[project.scripts]
party-walls = "party_walls.city_stats:main_cmd"
