[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/party_walls"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "party-walls"
version = "0.1.0"
description = "Party wall statistics from CityJSON building models"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "pymeshfix>=0.16.2",
    "shapely>=2.0.1",
    "pyvista>=0.37.0",
    "vtk>=9.2.6",
    "mapbox-earcut>=1.0.1",
    "scikit-learn>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.ruff]
src = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false

[tool.ruff.lint]
select = ["E", "F", "I"]


