[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bag3d_surfaces"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "bag3d-surfaces"
version = "2026.1003"
description = "Party wall statistics from CityJSON building models"
requires-python = ">=3.12"
readme = "README.md"
authors = [
    { name = "Balázs Dukai", email = "balazs.dukai@3dgi.nl" },
    { name = "Ravi Peters", email = "ravi.peters@3dgi.nl" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "pymeshfix>=0.16.2",
    "shapely>=2.0.1",
    "pyvista>=0.37.0",
    "vtk>=9.2.6",
    "mapbox-earcut>=1.0.1",
    "scikit-learn>=1.3.0",
]

[dependency-groups]
dev = [
    "bumpver>=2025.1131",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.ruff]
src = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingTypeStubs = false

[tool.bumpver]
current_version = "2026.1003"
version_pattern = "YYYY.BUILD"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]

[tool.bumpver.pre_commit]
commands = [
    "uv sync",
    "git add uv.lock",
]


